tests/good/int1.pas
program int;
var i: integer;
begin

end.
