tests/bad/test_end1.pas
program test_end;

begin

end

;
